<resources>
    <string name="app_name">PartyVilla</string>
    <string name="web_client_id">502034513914-r6bal07aoso9hksdegk08kogigqknceh.apps.googleusercontent.com</string>
    <string name="facebook_app_id">327421864842728</string>
    <string name="fb_login_protocol_scheme">fb361829594635888</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_detail">Please type the verification code sent to</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_category">Category</string>
    <string name="title_offers">Offers</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="hintSearchMess">Search...</string>
</resources>
