<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/nav_home"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_category"
            android:icon="@drawable/nav_category"
            android:title="@string/title_category"/>

    <item
            android:id="@+id/navigation_offer"
            android:icon="@drawable/nav_offer"
            android:title="@string/title_offers"/>
    <item
            android:id="@+id/navigation_shop"
            android:icon="@drawable/nav_shop"
            android:title="@string/title_order"/>
    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/title_profile"/>
</menu>
