<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.VerificationActivity">


    <TextView
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:text="@string/verification_code"
            style="@style/large_text"
            android:textColor="@color/colorBlack"/>

    <TextView
            android:id="@+id/verifydetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/verify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/verification_detail"
            style="@style/button_text"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>

    <TextView
            android:id="@+id/txt_verification_mobno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/verifydetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="+91-8254657800"
            style="@style/button_text"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>
    <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_verification_mobno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <EditText
                android:id="@+id/txt_otp1"
                android:layout_width="@dimen/otp_width"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:imeOptions="actionNext"
                style="@style/LoginTextInputLayoutotp"/>

        <EditText
                android:id="@+id/txt_otp2"
                android:layout_width="@dimen/otp_width"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:imeOptions="actionNext"
                style="@style/LoginTextInputLayoutotp"/>
        <EditText
                android:id="@+id/txt_otp3"
                android:layout_width="@dimen/otp_width"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                android:imeOptions="actionNext"
                style="@style/LoginTextInputLayoutotp"/>
        <EditText
                android:id="@+id/txt_otp4"
                android:layout_width="@dimen/otp_width"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:inputType="number"
                style="@style/LoginTextInputLayoutotp"/>
    </LinearLayout>

    <TextView
            android:id="@+id/lbl_resend_otp_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_otp"
            app:layout_constraintEnd_toStartOf="@+id/lbl_resend_otp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            style="@style/small_text_blue"/>

    <TextView
            android:id="@+id/lbl_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_otp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp"
            android:text="@string/resend_otp"
            style="@style/small_text_blue"/>


    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_resend_otp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="Login"
            android:background="@drawable/button_shape"
            style="@style/button_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>